--- a/LostV2/CampingAdventure.csproj
+++ b/LostV2/CampingAdventure.csproj
@@ -136,6 +136,9 @@
   <ItemGroup>
     <None Include="Resources\CampFrontDoor.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ambulance Sound.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
